--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -9,15 +9,14 @@ on:
     branches:
       - develop
 
-permissions:
-  contents: read
-  pull-requests: write
-
 jobs:
 
   terraform-validate:
     name: 'Terraform Validate and Plan'
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
+      pull-requests: write
     steps:
 
       - name: Checkout
