--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,15 +9,14 @@ on:
     branches:
       - main
 
-permissions:
-  contents: read
-  pull-requests: write
-
 jobs:
 
   terraform-validate:
     name: 'Terraform Plan & Apply'
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
+      pull-requests: write
     steps:
 
       - name: Checkout
