--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -15,6 +15,8 @@ jobs:
     name: 'Terraform Validate and Plan'
     runs-on: ubuntu-latest
     permissions:
+      id-token: write
+      contents: read
       issues: write
       pull-requests: write
     steps:
