--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,6 +15,8 @@ jobs:
     name: 'Terraform Plan & Apply'
     runs-on: ubuntu-latest
     permissions:
+      id-token: write
+      contents: read
       issues: write
       pull-requests: write
     steps:
